<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white">

	<!-- days header -->
	<LinearLayout
		android:id="@+id/calendar_header"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<TextView
			android:text="@string/sun"
			style="@style/month_text" />

		<TextView
			style="@style/month_text"
			android:text="@string/mon" />

		<TextView
			style="@style/month_text"
			android:text="@string/tue" />

		<TextView
			style="@style/month_text"
			android:text="@string/wed" />

		<TextView
			style="@style/month_text"
			android:text="@string/thu" />

		<TextView
			style="@style/month_text"
			android:text="@string/fri" />

		<TextView
			style="@style/month_text"
			android:text="@string/sat" />
	</LinearLayout>

	<!-- days view -->
	<GridView
		android:id="@+id/calendar_grid"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:verticalSpacing="4dp"
		android:paddingStart="4dp"
		android:paddingEnd="4dp"
		android:paddingTop="4dp"
		android:numColumns="7"/>
</LinearLayout>